Update dependencies and workflows (#46)
* Update cui-parent to 1.1.0 and modernize GitHub workflows
* Set Java 21 as the baseline.
* Code Cleanup