@@ -1,12 +1,12 @@
-/*
- * Copyright 2023 the original author or authors.
- * <p>
+/**
+ * Copyright © 2025 CUI-OpenSource-Software (info@cuioss.de)
+ *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * <p>
- * https://www.apache.org/licenses/LICENSE-2.0
- * <p>
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -14,16 +14,6 @@
  * limitations under the License.
  */
 package de.cuioss.test.valueobjects.generator.dynamic.impl;
-
-import java.lang.reflect.Constructor;
-import java.lang.reflect.InvocationTargetException;
-import java.lang.reflect.Modifier;
-import java.lang.reflect.Parameter;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Comparator;
-import java.util.List;
-import java.util.Optional;
 
 import de.cuioss.test.generator.TypedGenerator;
 import de.cuioss.test.valueobjects.generator.TypedGeneratorRegistry;
@@ -35,6 +25,12 @@ import lombok.AccessLevel;
 import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 import lombok.ToString;
+
+import java.lang.reflect.Constructor;
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Modifier;
+import java.lang.reflect.Parameter;
+import java.util.*;
 
 /**
  * @author Oliver Wolff
@@ -61,9 +57,9 @@ public class ConstructorBasedGenerator<T> implements TypedGenerator<T> {
             try {
                 return constructor.newInstance();
             } catch (final InstantiationException | IllegalAccessException | IllegalArgumentException
-                    | InvocationTargetException e) {
+                | InvocationTargetException e) {
                 throw new IllegalStateException(
-                        UNABLE_TO_CALL_CONSTRUCTOR_FOR_CLASS.formatted(constructor, type, e.getMessage()), e);
+                    UNABLE_TO_CALL_CONSTRUCTOR_FOR_CLASS.formatted(constructor, type, e.getMessage()), e);
             }
         }
         final var parameter = new ArrayList<>();
@@ -72,9 +68,9 @@ public class ConstructorBasedGenerator<T> implements TypedGenerator<T> {
             logExtendedInformationAboutUsedConstructor(parameter);
             return constructor.newInstance(parameter.toArray());
         } catch (final InstantiationException | IllegalAccessException | IllegalArgumentException
-                | InvocationTargetException e) {
+            | InvocationTargetException e) {
             throw new IllegalStateException(UNABLE_TO_CALL_CONSTRUCTOR_FOR_CLASS.formatted(constructor, type,
-                    ExceptionHelper.extractCauseMessageFromThrowable(e)), e);
+                ExceptionHelper.extractCauseMessageFromThrowable(e)), e);
         }
     }
 
@@ -83,10 +79,10 @@ public class ConstructorBasedGenerator<T> implements TypedGenerator<T> {
         if (!Modifier.isPublic(constructorModifierValue)) {
 
             log.warn("""
-                    !!! Attention :\s\
-                    A non public constructor will be used to create an instance for {}.\s\
-                    This is illegal and can cause unexpected behaviour.\s\
-                    Solution: provide a fitting generator instead!""", constructor.getName());
+                !!! Attention : \
+                A non public constructor will be used to create an instance for {}. \
+                This is illegal and can cause unexpected behaviour. \
+                Solution: provide a fitting generator instead!""", constructor.getName());
 
             final List<String> parameterInfo = new ArrayList<>(constructor.getParameters().length);
             for (final Parameter parameter : constructor.getParameters()) {
@@ -95,7 +91,7 @@ public class ConstructorBasedGenerator<T> implements TypedGenerator<T> {
 
             final var modifier = Modifier.toString(constructorModifierValue);
             final var constructorInfo = modifier + " " + constructor.getName() + "("
-                    + Joiner.on(", ").skipNulls().join(parameterInfo) + ")";
+                + Joiner.on(", ").skipNulls().join(parameterInfo) + ")";
             log.info("Used constructor : {}", constructorInfo);
             log.info("Used constructor parameter : {}", logUsedValuesForConstructor(parameterValues));
         }
@@ -104,7 +100,7 @@ public class ConstructorBasedGenerator<T> implements TypedGenerator<T> {
     private static String logUsedValuesForConstructor(final ArrayList<Object> parameter) {
         final List<String> parameterInfo = new ArrayList<>();
         for (final Object object : parameter) {
-            parameterInfo.add("[" + object.getClass().getSimpleName() + " " + object.toString() + "]");
+            parameterInfo.add("[" + object.getClass().getSimpleName() + " " + object + "]");
         }
         return Joiner.on(", ").skipNulls().join(parameterInfo);
     }
@@ -171,16 +167,16 @@ public class ConstructorBasedGenerator<T> implements TypedGenerator<T> {
     }
 
     private static <T> Optional<TypedGenerator<T>> findFittingConstructor(final Class<T> type,
-            final List<Constructor<?>> constructorList) {
+        final List<Constructor<?>> constructorList) {
         log.debug("Searching constructor for class {}", type);
         if (1 == constructorList.size()) {
             log.debug("Only one constructor present, so choosing this one");
-            return createForConstructor(type, constructorList.get(0));
+            return createForConstructor(type, constructorList.getFirst());
         }
         for (final Constructor<?> con : constructorList) {
             // Ok, try to find a constructor where the parameter are already registered
             // Generator
-            final List<Class<?>> parameter = Arrays.asList(con.getParameterTypes());
+            final Class<?>[] parameter = con.getParameterTypes();
             var allGeneratorAvailable = true;
             for (final Class<?> param : parameter) {
                 if (!TypedGeneratorRegistry.containsGenerator(param)) {
@@ -206,8 +202,7 @@ public class ConstructorBasedGenerator<T> implements TypedGenerator<T> {
 
     @SuppressWarnings("java:S3011") // owolff: Setting accessible is ok for test-code
     private static <T> Optional<TypedGenerator<T>> createForConstructor(final Class<T> type, final Constructor<?> con) {
-        @SuppressWarnings("unchecked")
-        final var constructor = (Constructor<T>) con;
+        @SuppressWarnings("unchecked") final var constructor = (Constructor<T>) con;
         constructor.setAccessible(true);
 
         final List<TypedGenerator<?>> generators = new ArrayList<>();
@@ -216,8 +211,8 @@ public class ConstructorBasedGenerator<T> implements TypedGenerator<T> {
                 // Special case her: eventually copy-constructor -> Play safe prevent infinite
                 // loop, type in this case is not an interface
                 log.warn(
-                        "Unable to create a generator for copy-constuctor of same type for class {}, constructor parameter type = {}",
-                        type, parameterType);
+                    "Unable to create a generator for copy-constuctor of same type for class {}, constructor parameter type = {}",
+                    type, parameterType);
                 return Optional.empty();
 
             }
